2005-12-05  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.compile/rh174912.java: New file.

2005-12-01  Alan Modra  <amodra@bigpond.net.au>

	* stacktrace.cc (UnwindTraceFn): Use UNWRAP_FUNCTION_DESCRIPTOR
	to compare _Jv_InterpMethod::run against current func.

2005-11-30  Andrew Haley  <aph@redhat.com>

	* classpath/lib/Makefile.am (resources): Use `cp -p'.
	Remove `@' from start of line.

2005-11-29  Tom Tromey  <tromey@redhat.com>

	PR java/18278:
	* testsuite/libjava.jni/pr18278.out: New file.
	* testsuite/libjava.jni/pr18278.c: New file.
	* testsuite/libjava.jni/pr18278.java: New file.
	* include/jvm.h (_Jv_UnwrapJNIweakReference): Declare.
	* jni.cc (_Jv_UnwrapJNIweakReference): New function.
	(call): Unwrap return value if needed.

2005-11-25  Mark Wielaard  <mark@klomp.org>

	* standard.omit.in: Remove javax/rmi, org/omg, gnu/CORBA and
	gnu/javax/rmi.
	* scripts/makemake.tcl: Set javax/rmi, org/omg, gnu/CORBA and
	gnu/javax/rmi to bc.
	* gnu/CORBA/ObjectCreator.java: New override file for missing
	VMStackWalker issue.
	* gnu/CORBA/DynAn/gnuDynValue.java: New override file for bug #24938
	* gnu/CORBA/DynAn/RecordAny.java: Likewise
	* sources.am: Regenerated.
	* Makefile.in: Regenerated

2005-11-25  Andrew Haley  <aph@redhat.com>

	PR libgcj/25016
	* posix-threads.cc (_Jv_CondWait): Rewrite calculation of the
	struct timespec we pass to pthread_cond_timedwait.

2005-11-24  Bryce McKinlay  <mckinlay@redhat.com>

        * gij.cc (nonstandard_opts_help): Add entry for -Xss.

2005-11-17  Mark Wielaard  <mark@klomp.org>

	Imported GNU Classpath gcj-import-20051117.
	* gnu/java/net/protocol/file/Connection.java: Removed, fully merged.
	* sources.am: Regenerated.
	* Makefile.in: Likewise.

2005-11-17  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/file/Handler.java: Removed, fully merged now.
	* java/net/ServerSocket.java: Likewise.
	* sources.am: Regenerated.
	* Makefile.in: Regenerated.

2005-11-17  Mark Wielaard  <mark@klomp.org>
